src/test/deca/codegen/valid/avecObjet/two_classes_independent.deca
// Description :
//    Deux classes indépendantes sans héritage.
//
// Resultats :
//

class A {
    int x;
}

class B {
    float y;
}

{
}

