src/test/deca/codegen/invalid/float_incompatible.deca
// Resultats :
// Erreur attendue : type incompatible
{
    float x = 3.14;
    int y = x;
}